--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,11 @@ spring:
     username: root
     password: 1234
 
+  mvc:
+    view:
+      prefix: /WEB-INF/
+      suffix: .jsp
+
   jpa:
     show-sql: true
     hibernate:
