--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     implementation 'javax.servlet:jstl'
@@ -44,7 +45,6 @@ dependencies {
     implementation 'mysql:mysql-connector-java:8.0.29'
 
     compileOnly 'org.projectlombok:lombok'
-    // runtimeOnly 'com.mysql:mysql-connector-j'
 
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
